--- a/.github/workflows/deploy-premier-league-mcp.yml
+++ b/.github/workflows/deploy-premier-league-mcp.yml
@@ -24,6 +24,13 @@ jobs:
         pip install -r requirements.txt
         
     - name: Run tests
+      env:
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+        RAPID_API_KEY_FOOTBALL: ${{ secrets.RAPID_API_KEY_FOOTBALL }}
+        DEFAULT_SEASON: ${{ secrets.DEFAULT_SEASON }}
+        PREMIER_LEAGUE_ID: ${{ secrets.PREMIER_LEAGUE_ID }}
+        DEFAULT_REQUEST_MODE: ${{ secrets.DEFAULT_REQUEST_MODE }}
       run: |
         python tests/test_enhanced_functions.py
         
