add standalone server

--- a/.github/workflows/deploy-premier-league-mcp.yml
+++ b/.github/workflows/deploy-premier-league-mcp.yml
@@ -59,18 +59,5 @@ jobs:
     - name: Deploy to VPS
       run: |
         ssh -p 22 ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} '
-          docker pull ghcr.io/${{ github.repository_owner }}/premier-league-mcp-server:latest
-          docker stop premier-league-mcp || true
-          docker rm premier-league-mcp || true
-          docker run -d \
-            --name premier-league-mcp \
-            --restart unless-stopped \
-            -p 5000:5000 \
-            -e SUPABASE_URL="${{ secrets.SUPABASE_URL }}" \
-            -e SUPABASE_ANON_KEY="${{ secrets.SUPABASE_ANON_KEY }}" \
-            -e RAPID_API_KEY_FOOTBALL="${{ secrets.RAPID_API_KEY_FOOTBALL }}" \
-            -e DEFAULT_REQUEST_MODE="${{ secrets.DEFAULT_REQUEST_MODE }}" \
-            -e PREMIER_LEAGUE_ID="${{ secrets.PREMIER_LEAGUE_ID }}" \
-            -e DEFAULT_SEASON="${{ secrets.DEFAULT_SEASON }}" \
-            ghcr.io/${{ github.repository_owner }}/premier-league-mcp-server:latest
+          /root/app/scripts/update-premier-league-mcp.sh
         '
