--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ pandas>=2.0.0
 pydantic>=2.0.0
 pydantic-settings>=2.8.0
 
+# MCP Server
+fastmcp>=0.1.0
+
 # Supabase integration
 supabase>=2.0.0
 python-dotenv>=1.0.0
